# agora

./: .gitignore  README.md  TODO-POST-M1.md  TODO-POST-M2.md  install-agora-startup.ps1  pyproject.toml  remove-agora-startup.ps1  restart-agora.bat  start-agora.bat
docs/: ARCHITECTURE.md  M2-SPEC.md  M3-SPEC.md  M4-SPEC.md  MILESTONES.md  UX-DESIGN-NOTES.md  agora-room-styles-explainer.html  primary-pair-audit-3dc34430-7200-4b14-8fe5-ae40c30d7901.html  primary-pair-convergence-flow.html
examples/exhaustion-loop/: EXAMPLE-USE-CASES.md  dod-population-estimator.md
examples/exhaustion-loop/population-estimator/: README.md  population_estimator.py  test_population_estimator.py
examples/exhaustion-loop/population-estimator-broken/: README.md  population_estimator.py
scripts/: agora_dialogue.py  agora_inbox.py  analyze_primary_pair_ledger.py  ask_agent.py  render_primary_pair_audit.py  run_primary_pair_backend.py
src/agora/: gateway.py
src/agora/commands/: handlers.py  parser.py
src/agora/config/: phases.py
src/agora/drivers/: __init__.py  anthropic_code.py  base.py  chatgpt_web.py  claude_code_new.py  claude_code_resume.py  claude_web.py  codex.py  fake.py  gemini_cli.py  gemini_web.py  openclaw.py  web_base.py
src/agora/engine/: budget.py  convergence.py  live_handover.py  (+4 more)
tests/: test_api_service.py  test_commands.py  test_convergence.py  test_engine_states.py  test_gateway_m3.py  test_integration_fake_debate.py  test_live_handover.py  test_m3_e2e.py  test_ops_models.py  test_ops_parser.py  test_phases_m2.py  test_primary_pair_runner.py  test_templates.py
(+16 files in other folders)
